# sqlalchemy-models-commands

./: Makefile  README.md  pyproject.toml
.github/workflows/: compatibility.yml
simplecrud/: __init__.py  crud.py
simplecrud/asyncpg_commands/: cruds.py
tests/: test_postgres_scheme.sql
tests/test_asyncpg/: test_crud.py
tests/test_sqlalchemy/: test_crud.py  test_utils.py
