[tool.poetry]
name = "hexfrost-simplecrud"
version = "0.3.1"
description = "Library for easy usage database CRUD operations"
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
packages = [
    { include = "simplecrud" },
]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

sqlalchemy =  { version = ">=2.0.0", optional = true }
asyncpg = { version = ">=0.29.0", optional = true }


[tool.poetry.extras]
asyncpg = ["asyncpg"]
sqlalchemy = ["sqlalchemy"]


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^7.4.3"
aiosqlite = "^0.19.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.test.dependencies]
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"